added PUC  to index.html

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ contribute to innovative projects.
                   class="far fa-dot-circle text-primary position-absolute"
                   style="top: 2px; left: -32px"
                 ></i>
-                <h5 class="font-weight-bold mb-1">Bachelor In CSE</h5>
+                <h5 class="font-weight-bold mb-1">Pre University</h5>
                 <p class="mb-2">
                   <strong>KONNUR SCIENCE PU</strong> | <small>2018 - 2020</small>
                 </p>
