--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               class="display-3 text-uppercase text-primary mb-2"
               style="-webkit-text-stroke: 2px #ffffff"
             >
-              Mounesh Veerabhadra Badiger
+              Mounesh Badiger
             </h1>
             <h1
               class="typed-text-output d-inline font-weight-lighter text-white"
@@ -212,7 +212,7 @@
             <img class="img-fluid rounded w-100" src="img/about.jpg" alt="" />
           </div>
           <div class="col-lg-7">
-            <h3 class="mb-4">UI/UX Designer & Web Developer</h3>
+            <h3 class="mb-4">Computer Science Graduate</h3>
             <p>
               A Computer Science graduate with a passion for coding and problem-solving, seeking opportunities to apply technical skills and 
 contribute to innovative projects.
@@ -413,7 +413,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">HTML</h6>
-                <h6 class="font-weight-bold">95%</h6>
+                <h6 class="font-weight-bold">90%</h6>
               </div>
               <div class="progress">
                 <div
@@ -431,7 +431,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">CSS</h6>
-                <h6 class="font-weight-bold">85%</h6>
+                <h6 class="font-weight-bold">80%</h6>
               </div>
               <div class="progress">
                 <div
@@ -446,7 +446,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">JAVA</h6>
-                <h6 class="font-weight-bold">90%</h6>
+                <h6 class="font-weight-bold">80%</h6>
               </div>
               <div class="progress">
                 <div
@@ -464,7 +464,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">Javascript</h6>
-                <h6 class="font-weight-bold">90%</h6>
+                <h6 class="font-weight-bold">60%</h6>
               </div>
               <div class="progress">
                 <div
@@ -478,8 +478,8 @@ contribute to innovative projects.
             </div>
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
-                <h6 class="font-weight-bold">Angular JS</h6>
-                <h6 class="font-weight-bold">95%</h6>
+                <h6 class="font-weight-bold">DATA STRUCTURE</h6>
+                <h6 class="font-weight-bold">80%</h6>
               </div>
               <div class="progress">
                 <div
@@ -512,7 +512,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">SQL</h6>
-                <h6 class="font-weight-bold">90%</h6>
+                <h6 class="font-weight-bold">80%</h6>
               </div>
               <div class="progress">
                 <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -521,7 +521,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">GIT</h6>
-                <h6 class="font-weight-bold">85%</h6>
+                <h6 class="font-weight-bold">80%</h6>
               </div>
               <div class="progress">
                 <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
@@ -547,7 +547,7 @@ contribute to innovative projects.
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-bold">C PROGRAMMING</h6>
-                <h6 class="font-weight-bold">85%</h6>
+                <h6 class="font-weight-bold">75%</h6>
               </div>
               <div class="progress">
                 <div
